header img update

--- a/distribution-popwindow.html
+++ b/distribution-popwindow.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/extra-distribution.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/franchisee.css" />
+    <link rel="stylesheet" href="/css/header.css">
     <!-- common css -->
     <link rel="stylesheet" href="./css/common.css" />
     <!-- bootstrap-icon -->
@@ -18,7 +19,267 @@
   </head>
   <body>
     <!-- nav bar -->
-    <header></header>
+    <header>
+      <nav>
+          <section class="nav-logo">
+              <a href="./index.html">
+                  <img class="nav-logo-btn" src="/frontend-img/header-img/LOGO.png" alt="tiger-logo">
+              </a>
+          </section>
+
+          <section class="nav-main">
+              <section class="main-menu">
+                  <!----------------------------- 關於我們 ------------------------------------>
+                  <a href="#about" class="about-link">
+                      <div class="about">
+                          <div class="about-img">
+                              <div class="main-menu-img">
+                                  <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
+                                  <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png" alt="about-icon">
+                              </div>
+                          </div>
+                          <div class="main-menu-text">
+                              <div class="text-ch">關於我們</div>
+                              <div class="text-en">ABOUT</div>
+                          </div>
+                      </div>
+                  </a>
+                  <!----------------------------- 產品經銷 ------------------------------------>
+                  <a href="#distribution" class="distribution-link">
+                      <div class="distribution">
+                          <div class="main-menu-img">
+                              <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                                  alt="distribution-icon">
+                              <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                                  alt="distribution-gold-icon">
+                          </div>
+                          <div class="main-menu-text">
+                              <span class="text-ch">產品經銷</span>
+                              <span class="text-en">DISTRIBUTION</span>
+                          </div>
+                      </div>
+                  </a>
+                  <!----------------------------- 熱門經典 ------------------------------------>
+                  <a href="#classic" class="classic-link">
+                      <div class="classic">
+                          <div class="main-menu-img">
+                              <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
+                              <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                                  alt="classic-gold-icon">
+                          </div>
+                          <div class="main-menu-text">
+                              <span class="text-ch">熱門經典</span>
+                              <span class="text-en">CLASSIC</span>
+                          </div>
+                      </div>
+                  </a>
+                  <!----------------------------- 媒體露出 ------------------------------------>
+                  <a href="#media" class="media-link">
+                      <div class="media">
+                          <div class="main-menu-img">
+                              <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
+                              <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png" alt="media-icon-icon">
+                          </div>
+                          <div class="main-menu-text">
+                              <span class="text-ch">媒體露出</span>
+                              <span class="text-en">MEDIA</span>
+                          </div>
+                      </div>
+                  </a>
+                  <!----------------------------- 加盟專區 ------------------------------------>
+                  <a href="#franchisee" class="franchisee-link">
+                      <div class="franchisee">
+                          <div class="main-menu-img">
+                              <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png" alt="franchisee-icon">
+                              <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                                  alt="franchisee-gold-icon">
+                          </div>
+                          <div class="main-menu-text">
+                              <span class="text-ch">加盟專區</span>
+                              <span class="text-en">FRANCHISEE</span>
+                          </div>
+                      </div>
+                  </a>
+
+              </section>
+              <!----------------------------- 社群連結 ------------------------------------>
+              <section class="social-menu">
+                  <div class="social-menu-main">
+                      <div class="social-menu-icon">
+                          <a href="https://www.facebook.com/twtigersugar/">
+                              <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                          </a>
+                      </div>
+
+                      <div class="social-menu-icon">
+                          <a href="https://www.instagram.com/twtigersugar/">
+                              <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                          </a>
+                      </div>
+                  </div>
+                  <!----------------------------- 語言選擇 ------------------------------------>
+                  <section class="language-menu ">
+                      <div class="language-position">
+                          <div class="drop-down-menu">
+                              <a href="#">LANGUAGE &dtrif;</a>
+                          </div>
+                          <div class="drop-down-menu-sub">
+                              <div class="dropdown-content-ch">
+                                  <a href="https://tigersugar.com/">繁體中文</a>
+                              </div>
+                              <div class="dropdown-content-en">
+                                  <a href="https://en.tigersugar.com/">English</a>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+              </section>
+          </section>
+          <!-- 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
+          <section class="jing-section btn">
+              <img class="jing-section-btn" src="/frontend-img/header-img/nav_menu_list.png" alt="navm-enu-list">
+          </section>
+
+
+
+          <!-- 漢堡條 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
+          <div class="container menu">
+              <div class="nav-ham">
+                  <div class="mine-menu">
+                      <div class="flex-mine-menu">
+                          <div class="top-mine-menu">
+                              <!----------------------------- 關於我們 ------------------------------------>
+                              <a href="#about" id="drop-about">
+                                  <div class="menu-about">
+                                      <div class="about-img">
+                                          <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
+                                          <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png"
+                                              alt="about-icon">
+                                      </div>
+                                      <div class="main-menu-text">
+                                          <div class="main-menu-text-ch">關於我們</div>
+                                          <div class="main-menu-text-en">ABOUT</div>
+                                      </div>
+                                  </div>
+                              </a>
+                              <!----------------------------- 產品經銷 ------------------------------------>
+                              <a href="#distribution" id="drop-distribution">
+                                  <div class="menu-distribution">
+                                      <div class="distribution-img">
+                                          <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                                              alt="distribution-icon">
+                                          <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                                              alt="distribution-gold-icon">
+                                      </div>
+                                      <div class="main-menu-text">
+                                          <span class="main-menu-text-ch">產品經銷</span>
+                                          <span class="main-menu-text-en">DISTRIBUTION</span>
+                                      </div>
+                                  </div>
+                              </a>
+                              <!----------------------------- 熱門經典 ------------------------------------>
+                              <a href="#classic" id="drop-classic">
+                                  <div class="menu-classic">
+                                      <div class="classic-img">
+                                          <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
+                                          <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                                              alt="classic-gold-icon">
+                                      </div>
+                                      <div class="main-menu-text">
+                                          <span class="main-menu-text-ch">熱門經典</span>
+                                          <span class="main-menu-text-en">CLASSIC</span>
+                                      </div>
+                                  </div>
+                              </a>
+                              <!----------------------------- 媒體露出 ------------------------------------>
+                              <a href="#media" id="drop-media">
+                                  <div class="menu-media">
+                                      <div class="media-img">
+                                          <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
+                                          <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png"
+                                              alt="media-icon-icon">
+                                      </div>
+                                      <div class="main-menu-text">
+                                          <span class="main-menu-text-ch">媒體露出</span>
+                                          <span class="main-menu-text-en">MEDIA</span>
+                                      </div>
+                                  </div>
+                              </a>
+                              <!----------------------------- 加盟專區 ------------------------------------>
+                              <a href="#franchisee" id="drop-franchisee">
+                                  <div class="menu-franchisee">
+                                      <div class="franchisee-img">
+                                          <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png"
+                                              alt="franchisee-icon">
+                                          <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                                              alt="franchisee-gold-icon">
+                                      </div>
+                                      <div class="main-menu-text">
+                                          <span class="main-menu-text-ch">加盟專區</span>
+                                          <span class="main-menu-text-en">FRANCHISEE</span>
+                                      </div>
+                                  </div>
+                              </a>
+                          </div>
+
+
+                          <div class="mine-menu-btn">
+                              <!----------------------------- 語言選擇 ------------------------------------>
+                              <div class="swiper-language">
+                                  <div class="swiper mySwiper header-swiper-container">
+                                      <div class="swiper-wrapper header-swiper-language">
+                                          <div class="swiper-slide">
+                                              <a href="" title="繁體中文">
+                                                  <div class="header-slide-ch">
+                                                      繁體中文
+                                                  </div>
+                                              </a>
+                                          </div>
+                                          <div class="swiper-slide">
+                                              <a href="" title="english">
+                                                  <div class="header-slide-en">
+                                                      ENGLISH
+                                                  </div>
+                                              </a>
+                                          </div>
+                                      </div>
+                                      <div class="swiper-button-next header-button-next">
+                                          <!-- <img src="/img/swiper-button-next.svg alt="button-next"> -->
+                                      </div>
+                                      <div class="swiper-button-prev header-button-prev">
+                                          <!-- <img src="/img/swiper-button-prev.svg alt="button-prev"> -->
+                                      </div>
+                                  </div>
+                              </div>
+                              <!----------------------------- 社群連結 ------------------------------------>
+                              <div class="social-menu-icon">
+                                  <a href="" title="老虎堂FB">
+                                      <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                                  </a>
+                                  <a href="" title="老虎堂IG">
+                                      <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                                  </a>
+                              </div>
+
+                          </div>
+                      </div>
+                  </div>
+      </nav>
+      <!-- 秋 選單紀錄 按鈕 -->
+      <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
+          <img class="shop-cart" src="/frontend-img/header-img/shop_cart_button.svg">
+          <div class="shop-cart-amount-area">
+              <img class="shop-cart-amount" src="/frontend-img/header-img/amount.svg">
+              <div class="shop-cart-number">0</div>
+          </div>
+      </a>
+
+      <!-- 秋 top 按鈕 -->
+      <div class="go-to-top-container topbtn">
+          <!-- "#"回到最上方 -->
+          <a href="#"><img class="go-to-top" src="/frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+      </div>
+  </header>
     <div class="window-overlay"></div>
     <!-- 內容頁 -->
     <section id="distribution">
