header img path update

--- a/franchisee-form.html
+++ b/franchisee-form.html
@@ -21,7 +21,7 @@
     <nav>
         <section class="nav-logo">
             <a href="./index.html">
-                <img class="nav-logo-btn" src="/frontend-img/header-img/LOGO.png" alt="tiger-logo">
+                <img class="nav-logo-btn" src="./frontend-img/header-img/LOGO.png" alt="tiger-logo">
             </a>
         </section>
 
@@ -32,8 +32,8 @@
                     <div class="about">
                         <div class="about-img">
                             <div class="main-menu-img">
-                                <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
-                                <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png" alt="about-icon">
+                                <img class="main-menu-about" src="./frontend-img/header-img/about.png" alt="about-icon">
+                                <img class="main-menu-about-gold" src="./frontend-img/header-img/about-gold.png" alt="about-icon">
                             </div>
                         </div>
                         <div class="main-menu-text">
@@ -46,9 +46,9 @@
                 <a href="#distribution" class="distribution-link">
                     <div class="distribution">
                         <div class="main-menu-img">
-                            <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                            <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
                                 alt="distribution-icon">
-                            <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                            <img class="main-menu-distribution-gold" src="./frontend-img/header-img/distribution-gold.png"
                                 alt="distribution-gold-icon">
                         </div>
                         <div class="main-menu-text">
@@ -61,8 +61,8 @@
                 <a href="#classic" class="classic-link">
                     <div class="classic">
                         <div class="main-menu-img">
-                            <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
-                            <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                            <img class="main-menu-classic" src="./frontend-img/header-img/classic.png" alt="classic-icon">
+                            <img class="main-menu-classic-gold" src="./frontend-img/header-img/classic-gold.png"
                                 alt="classic-gold-icon">
                         </div>
                         <div class="main-menu-text">
@@ -75,8 +75,8 @@
                 <a href="#media" class="media-link">
                     <div class="media">
                         <div class="main-menu-img">
-                            <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
-                            <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png" alt="media-icon-icon">
+                            <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
+                            <img class="main-menu-media-gold" src="./frontend-img/header-img/media-gold.png" alt="media-icon-icon">
                         </div>
                         <div class="main-menu-text">
                             <span class="text-ch">媒體露出</span>
@@ -88,8 +88,8 @@
                 <a href="#franchisee" class="franchisee-link">
                     <div class="franchisee">
                         <div class="main-menu-img">
-                            <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png" alt="franchisee-icon">
-                            <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                            <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png" alt="franchisee-icon">
+                            <img class="main-menu-franchisee-gold" src="./frontend-img/header-img/franchisee-gold.png"
                                 alt="franchisee-gold-icon">
                         </div>
                         <div class="main-menu-text">
@@ -105,13 +105,13 @@
                 <div class="social-menu-main">
                     <div class="social-menu-icon">
                         <a href="https://www.facebook.com/twtigersugar/">
-                            <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                            <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                         </a>
                     </div>
 
                     <div class="social-menu-icon">
                         <a href="https://www.instagram.com/twtigersugar/">
-                            <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                            <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
                         </a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
         </section>
         <!-- 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
         <section class="jing-section btn">
-            <img class="jing-section-btn" src="/frontend-img/header-img/nav_menu_list.png" alt="navm-enu-list">
+            <img class="jing-section-btn" src="./frontend-img/header-img/nav_menu_list.png" alt="navm-enu-list">
         </section>
 
 
@@ -150,8 +150,8 @@
                             <a href="#about" id="drop-about">
                                 <div class="menu-about">
                                     <div class="about-img">
-                                        <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
-                                        <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png"
+                                        <img class="main-menu-about" src="./frontend-img/header-img/about.png" alt="about-icon">
+                                        <img class="main-menu-about-gold" src="./frontend-img/header-img/about-gold.png"
                                             alt="about-icon">
                                     </div>
                                     <div class="main-menu-text">
@@ -164,9 +164,9 @@
                             <a href="#distribution" id="drop-distribution">
                                 <div class="menu-distribution">
                                     <div class="distribution-img">
-                                        <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                                        <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
                                             alt="distribution-icon">
-                                        <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                                        <img class="main-menu-distribution-gold" src="./frontend-img/header-img/distribution-gold.png"
                                             alt="distribution-gold-icon">
                                     </div>
                                     <div class="main-menu-text">
@@ -179,8 +179,8 @@
                             <a href="#classic" id="drop-classic">
                                 <div class="menu-classic">
                                     <div class="classic-img">
-                                        <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
-                                        <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                                        <img class="main-menu-classic" src="./frontend-img/header-img/classic.png" alt="classic-icon">
+                                        <img class="main-menu-classic-gold" src="./frontend-img/header-img/classic-gold.png"
                                             alt="classic-gold-icon">
                                     </div>
                                     <div class="main-menu-text">
@@ -193,8 +193,8 @@
                             <a href="#media" id="drop-media">
                                 <div class="menu-media">
                                     <div class="media-img">
-                                        <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
-                                        <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png"
+                                        <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
+                                        <img class="main-menu-media-gold" src="./frontend-img/header-img/media-gold.png"
                                             alt="media-icon-icon">
                                     </div>
                                     <div class="main-menu-text">
@@ -207,9 +207,9 @@
                             <a href="#franchisee" id="drop-franchisee">
                                 <div class="menu-franchisee">
                                     <div class="franchisee-img">
-                                        <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png"
+                                        <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
                                             alt="franchisee-icon">
-                                        <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                                        <img class="main-menu-franchisee-gold" src="./frontend-img/header-img/franchisee-gold.png"
                                             alt="franchisee-gold-icon">
                                     </div>
                                     <div class="main-menu-text">
@@ -252,10 +252,10 @@
                             <!----------------------------- 社群連結 ------------------------------------>
                             <div class="social-menu-icon">
                                 <a href="" title="老虎堂FB">
-                                    <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                                    <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                                 </a>
                                 <a href="" title="老虎堂IG">
-                                    <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                                    <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
                                 </a>
                             </div>
 
@@ -265,9 +265,9 @@
     </nav>
     <!-- 秋 選單紀錄 按鈕 -->
     <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
-        <img class="shop-cart" src="/frontend-img/header-img/shop_cart_button.svg">
+        <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg">
         <div class="shop-cart-amount-area">
-            <img class="shop-cart-amount" src="/frontend-img/header-img/amount.svg">
+            <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg">
             <div class="shop-cart-number">0</div>
         </div>
     </a>
@@ -275,7 +275,7 @@
     <!-- 秋 top 按鈕 -->
     <div class="go-to-top-container topbtn">
         <!-- "#"回到最上方 -->
-        <a href="#"><img class="go-to-top" src="/frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+        <a href="#"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
     </div>
 </header>
 
