--- a/distribution-confirm.html
+++ b/distribution-confirm.html
@@ -29,7 +29,7 @@
         <nav>
             <section class="nav-logo">
                 <a href="./index.html">
-                    <img class="nav-logo-btn" src="/frontend-img/header-img/LOGO.png" alt="tiger-logo">
+                    <img class="nav-logo-btn" src="./frontend-img/header-img/LOGO.png" alt="tiger-logo">
                 </a>
             </section>
 
@@ -40,8 +40,8 @@
                         <div class="about">
                             <div class="about-img">
                                 <div class="main-menu-img">
-                                    <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
-                                    <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png" alt="about-icon">
+                                    <img class="main-menu-about" src="./frontend-img/header-img/about.png" alt="about-icon">
+                                    <img class="main-menu-about-gold" src="./frontend-img/header-img/about-gold.png" alt="about-icon">
                                 </div>
                             </div>
                             <div class="main-menu-text">
@@ -54,9 +54,9 @@
                     <a href="#distribution" class="distribution-link">
                         <div class="distribution">
                             <div class="main-menu-img">
-                                <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                                <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
                                     alt="distribution-icon">
-                                <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                                <img class="main-menu-distribution-gold" src="./frontend-img/header-img/distribution-gold.png"
                                     alt="distribution-gold-icon">
                             </div>
                             <div class="main-menu-text">
@@ -69,8 +69,8 @@
                     <a href="#classic" class="classic-link">
                         <div class="classic">
                             <div class="main-menu-img">
-                                <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
-                                <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                                <img class="main-menu-classic" src="./frontend-img/header-img/classic.png" alt="classic-icon">
+                                <img class="main-menu-classic-gold" src="./frontend-img/header-img/classic-gold.png"
                                     alt="classic-gold-icon">
                             </div>
                             <div class="main-menu-text">
@@ -83,8 +83,8 @@
                     <a href="#media" class="media-link">
                         <div class="media">
                             <div class="main-menu-img">
-                                <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
-                                <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png" alt="media-icon-icon">
+                                <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
+                                <img class="main-menu-media-gold" src="./frontend-img/header-img/media-gold.png" alt="media-icon-icon">
                             </div>
                             <div class="main-menu-text">
                                 <span class="text-ch">媒體露出</span>
@@ -96,8 +96,8 @@
                     <a href="#franchisee" class="franchisee-link">
                         <div class="franchisee">
                             <div class="main-menu-img">
-                                <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png" alt="franchisee-icon">
-                                <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                                <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png" alt="franchisee-icon">
+                                <img class="main-menu-franchisee-gold" src="./frontend-img/header-img/franchisee-gold.png"
                                     alt="franchisee-gold-icon">
                             </div>
                             <div class="main-menu-text">
@@ -113,13 +113,13 @@
                     <div class="social-menu-main">
                         <div class="social-menu-icon">
                             <a href="https://www.facebook.com/twtigersugar/">
-                                <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                                <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                             </a>
                         </div>
 
                         <div class="social-menu-icon">
                             <a href="https://www.instagram.com/twtigersugar/">
-                                <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                                <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
                             </a>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
             </section>
             <!-- 測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕測試toggle按鈕 -->
             <section class="jing-section btn">
-                <img class="jing-section-btn" src="/frontend-img/header-img/nav_menu_list.png" alt="navm-enu-list">
+                <img class="jing-section-btn" src="./frontend-img/header-img/nav_menu_list.png" alt="navm-enu-list">
             </section>
 
 
@@ -158,8 +158,8 @@
                                 <a href="#about" id="drop-about">
                                     <div class="menu-about">
                                         <div class="about-img">
-                                            <img class="main-menu-about" src="/frontend-img/header-img/about.png" alt="about-icon">
-                                            <img class="main-menu-about-gold" src="/frontend-img/header-img/about-gold.png"
+                                            <img class="main-menu-about" src="./frontend-img/header-img/about.png" alt="about-icon">
+                                            <img class="main-menu-about-gold" src="./frontend-img/header-img/about-gold.png"
                                                 alt="about-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -172,9 +172,9 @@
                                 <a href="#distribution" id="drop-distribution">
                                     <div class="menu-distribution">
                                         <div class="distribution-img">
-                                            <img class="main-menu-distribution" src="/frontend-img/header-img/distribution.png"
+                                            <img class="main-menu-distribution" src="./frontend-img/header-img/distribution.png"
                                                 alt="distribution-icon">
-                                            <img class="main-menu-distribution-gold" src="/frontend-img/header-img/distribution-gold.png"
+                                            <img class="main-menu-distribution-gold" src="./frontend-img/header-img/distribution-gold.png"
                                                 alt="distribution-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -187,8 +187,8 @@
                                 <a href="#classic" id="drop-classic">
                                     <div class="menu-classic">
                                         <div class="classic-img">
-                                            <img class="main-menu-classic" src="/frontend-img/header-img/classic.png" alt="classic-icon">
-                                            <img class="main-menu-classic-gold" src="/frontend-img/header-img/classic-gold.png"
+                                            <img class="main-menu-classic" src="./frontend-img/header-img/classic.png" alt="classic-icon">
+                                            <img class="main-menu-classic-gold" src="./frontend-img/header-img/classic-gold.png"
                                                 alt="classic-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -201,8 +201,8 @@
                                 <a href="#media" id="drop-media">
                                     <div class="menu-media">
                                         <div class="media-img">
-                                            <img class="main-menu-media" src="/frontend-img/header-img/media.png" alt="media-icon">
-                                            <img class="main-menu-media-gold" src="/frontend-img/header-img/media-gold.png"
+                                            <img class="main-menu-media" src="./frontend-img/header-img/media.png" alt="media-icon">
+                                            <img class="main-menu-media-gold" src="./frontend-img/header-img/media-gold.png"
                                                 alt="media-icon-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -215,9 +215,9 @@
                                 <a href="#franchisee" id="drop-franchisee">
                                     <div class="menu-franchisee">
                                         <div class="franchisee-img">
-                                            <img class="main-menu-franchisee" src="/frontend-img/header-img/franchisee.png"
+                                            <img class="main-menu-franchisee" src="./frontend-img/header-img/franchisee.png"
                                                 alt="franchisee-icon">
-                                            <img class="main-menu-franchisee-gold" src="/frontend-img/header-img/franchisee-gold.png"
+                                            <img class="main-menu-franchisee-gold" src="./frontend-img/header-img/franchisee-gold.png"
                                                 alt="franchisee-gold-icon">
                                         </div>
                                         <div class="main-menu-text">
@@ -260,10 +260,10 @@
                                 <!----------------------------- 社群連結 ------------------------------------>
                                 <div class="social-menu-icon">
                                     <a href="" title="老虎堂FB">
-                                        <img class="social-menu-icon-fb" src="/frontend-img/header-img/fb.png" alt="icon-fb">
+                                        <img class="social-menu-icon-fb" src="./frontend-img/header-img/fb.png" alt="icon-fb">
                                     </a>
                                     <a href="" title="老虎堂IG">
-                                        <img class="social-menu-icon-ig" src="/frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
+                                        <img class="social-menu-icon-ig" src="./frontend-img/header-img/ig.png" alt="social-menu-icon-ig">
                                     </a>
                                 </div>
 
@@ -273,9 +273,9 @@
         </nav>
         <!-- 秋 選單紀錄 按鈕 -->
         <a href="./distribution-confirm.html" class="shop-cart-container" title="前往購物車">
-            <img class="shop-cart" src="/frontend-img/header-img/shop_cart_button.svg">
+            <img class="shop-cart" src="./frontend-img/header-img/shop_cart_button.svg">
             <div class="shop-cart-amount-area">
-                <img class="shop-cart-amount" src="/frontend-img/header-img/amount.svg">
+                <img class="shop-cart-amount" src="./frontend-img/header-img/amount.svg">
                 <div class="shop-cart-number">0</div>
             </div>
         </a>
@@ -283,7 +283,7 @@
         <!-- 秋 top 按鈕 -->
         <div class="go-to-top-container topbtn">
             <!-- "#"回到最上方 -->
-            <a href="#"><img class="go-to-top" src="/frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
+            <a href="#"><img class="go-to-top" src="./frontend-img/header-img/go_to_top.svg" alt="go_to_top"></a>
         </div>
     </header>
 
@@ -304,7 +304,8 @@
                 <div class="container">
                     <div class="title-area">
                         <div class="tiger-sugar-img-area">
-                            <img class="tiger-sugar-img" src="./images/distribution-confirm/bg/join_us.png" alt="老虎堂logo">
+                            <img src="./frontend-img/" alt="">
+                            <img class="tiger-sugar-img" src="./frontend-img/distribution-confirm-img/join_us.png" alt="老虎堂logo">
                         </div>
                         <div class="distribution-check">商品經銷項目確認</div>
                         <div class="title-bottom">
