--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
             <div class="header">
                 <div class="container">
                     <div class="title">
-                        <img class="ig-icon" src="/images/nav/icon1-7.png" alt="ig-icon">
+                        <img class="ig-icon" src="./frontend-img/index-img/social/icon1-7.png" alt="ig-icon">
                         <div class="title-text">
                             <div class="title-text-1">社群回饋</div>
                             <div class="title-text-2">SOCIAL</div>
